module(name = "ecsact_website")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc6")
bazel_dep(name = "aspect_rules_swc", version = "2.0.0-rc1")
bazel_dep(name = "aspect_rules_ts", version = "3.0.0-rc1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0-rc1")
bazel_dep(name = "libarchive", version = "3.7.4.bcr.2")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc4")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "bzlws")
git_override(
    module_name = "bzlws",
    commit = "d5fa2eeb89d9a64d26943bf7f545b3740be0a454",
    remote = "https://github.com/zaucy/bzlws",
)

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

register_toolchains(
    "//:tar_toolchain",
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
