load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "doxygen_devref",
    data = [
        "@npm//download",
        "@npm//execa",
        "@npm//listr",
        "@npm//yauzl",
    ],
    entry_point = "doxygen_devref.mjs",
)

nodejs_binary(
    name = "update_ecsact_sdk",
    data = [
        "@npm//download",
        "@npm//execa",
        "@npm//fs-extra",
        "@npm//listr",
        "@npm//yauzl",
    ],
    entry_point = "update_ecsact_sdk.mjs",
)
