load("@aspect_rules_js//js:defs.bzl", "js_binary")

js_binary(
    name = "doxygen_devref",
    data = [
        "//:node_modules/download",
        "//:node_modules/execa",
        "//:node_modules/listr",
        "//:node_modules/yauzl",
    ],
    entry_point = "doxygen_devref.mjs",
)

js_binary(
    name = "update_ecsact_sdk",
    data = [
        "//:node_modules/download",
        "//:node_modules/execa",
        "//:node_modules/fs-extra",
        "//:node_modules/listr",
        "//:node_modules/yauzl",
    ],
    entry_point = "update_ecsact_sdk.mjs",
)
