load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "app_component_style",
    srcs = ["app.component.scss"],
)

ng_project(
    name = "app",
    srcs = [
        "app.component.css",
        "app.component.html",
        "app.component.ts",
        "app.module.ts",
        "app-routing.module.ts",
        "service-worker.service.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/platform-browser",
        "//:node_modules/@angular/router",
        "//:node_modules/@angular/service-worker",
        "//:node_modules/firebase",
        "//:node_modules/rxjs",
        "//src/app/docs",
        "//src/app/docs/ecs",
        "//src/app/docs/implementations",
        "//src/app/docs/runtime",
        "//src/app/docs/runtime-builder",
        "//src/app/home",
        "//src/app/install",
        "//src/app/integrations/unity/install",
        "//src/app/introduction",
        "//src/app/not-found",
        "//src/app/reference",
        "//src/app/roadmap",
        "//src/app/start",
        "//src/components/search",
        "//src/search:meta-service",
    ],
)
