package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "assets",
    srcs = glob(["**/*"]) + [
        # renders are in the bazelignore so they must be manually specified here
        "renders/branch.png",
        "renders/character-dying.webm",
        "renders/ecsact-action-anim.webm",
        "renders/ecsact-all-color.png",
        "renders/ecsact-all-color44.png",
        "renders/ecsact-all-color150.png",
        "renders/ecsact-black.png",
        "renders/ecsact-black44.png",
        "renders/ecsact-black150.png",
        "renders/ecsact-color.png",
        "renders/ecsact-color44.png",
        "renders/ecsact-color150.png",
        "renders/ecsact-white.png",
        "renders/ecsact-white44.png",
        "renders/ecsact-white150.png",
        "renders/runtime.png",
        "renders/systems.png",
    ],
)
