load("@rules_blender//:index.bzl", "blender_render")
load("@bzlws//:index.bzl", "bzlws_copy")

package(default_visibility = ["//visibility:public"])

blender_render(
    name = "ecsact-action-anim",
    blend_file = "ecsact-action-anim.blend",
    frame_end = 103,
    frame_start = 0,
    render_format = "WEBM",
)

blender_render(
    name = "branch",
    blend_file = "branch.blend",
    render_format = "PNG",
)

bzlws_copy(
    name = "copy_renders",
    srcs = [
        ":branch",
        ":ecsact-action-anim",
    ],
    out = "src/assets/renders/{FILENAME}",
    force = True,
)
