load("@bzlws//rules:bzlws_copy.bzl", "bzlws_copy")
load("@rules_blender//:index.bzl", "blender_render")

package(default_visibility = ["//visibility:public"])

blender_render(
    name = "ecsact-action-anim",
    blend_file = "ecsact-action-anim.blend",
    frame_end = 103,
    frame_start = 0,
    render_format = "WEBM",
    tags = ["manual"],
)

blender_render(
    name = "branch",
    blend_file = "branch.blend",
    render_format = "PNG",
    tags = ["manual"],
)

blender_render(
    name = "runtime",
    blend_file = "runtime.blend",
    render_format = "PNG",
    tags = ["manual"],
)

blender_render(
    name = "systems",
    blend_file = "systems.blend",
    render_format = "PNG",
    tags = ["manual"],
)

bzlws_copy(
    name = "copy_renders",
    srcs = [
        ":branch",
        # ":ecsact-action-anim",
        ":runtime",
        ":systems",
        "@ecsact_logo",
    ],
    out = "src/assets/renders/{FILENAME}",
    force = True,
    tags = ["manual"],
)
