load("//tools:ng.bzl", "ng_project")
load("//tools:ts.bzl", "ts_project")

package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "doxygen-def-types",
    srcs = ["doxygen-def-types.ts"],
)

ts_project(
    name = "doxygen-parse",
    srcs = ["doxygen-parse.ts"],
    deps = [
        ":doxygen-def-types",
    ],
)

ts_project(
    name = "page-info-types",
    srcs = ["page-info-types.ts"],
)

ts_project(
    name = "searchable-page-infos",
    srcs = ["searchable-page-infos.ts"],
    deps = [
        ":page-info-types",
    ],
)

ng_project(
    name = "meta-service",
    srcs = ["search-meta.service.ts"],
    deps = [
        ":page-info-types",
        ":searchable-page-infos",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/platform-browser",
    ],
)

ng_project(
    name = "service",
    srcs = ["search.service.ts"],
    deps = [
        ":doxygen-def-types",
        ":doxygen-parse",
        ":page-info-types",
        ":searchable-page-infos",
        "//:node_modules/@angular/core",
        "//:node_modules/fuse.js",
        "//:node_modules/rxjs",
    ],
)
