load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

package(default_visibility = ["//:__pkg__"])

prettier.prettier_binary(
    name = "prettier",
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
    # default log level is "log" which spams on success
    # https://prettier.io/docs/en/cli.html#--log-level
    fixed_args = ["--log-level=warn"],
)

format_multirun(
    name = "format",
    css = ":prettier",
    html = ":prettier",
    javascript = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
)
