load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "docs_component_style",
    src = "docs.component.scss",
)

ng_ts_project(
    name = "docs",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "docs.component.html",
        ":docs_component_style",
    ],
    deps = [
        "//src/app/docs/cpp-system-impl-wasm",
        "//src/app/docs/ecs",
        "//src/app/docs/implementations",
        "//src/app/docs/lang",
        "//src/app/docs/runtime",
        "//src/app/docs/runtime-builder",
        "//src/app/docs/setup",
        "//src/app/docs/system-execution",
        "//src/app/docs/system-impl",
        "//src/app/docs/system-impl-wasm",
        "//src/app/docs/unity/defaults",
        "//src/app/docs/unity/entities",
        "//src/app/docs/unity/unity-sync",
        "//src/components/layout/content",
        "//src/components/layout/showcase",
        "//src/components/layout/sidenav",
        "//src/components/layout/sidenav-section",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
