load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "docs_component_style",
    srcs = ["docs.component.scss"],
)

ng_project(
    name = "docs",
    srcs = [
        "docs.component.css",
        "docs.component.html",
        "docs.component.ts",
        "docs-routing.module.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//src/app/docs/cpp-system-impl-wasm",
        "//src/app/docs/ecs",
        "//src/app/docs/implementations",
        "//src/app/docs/lang",
        "//src/app/docs/overview",
        "//src/app/docs/runtime",
        "//src/app/docs/system-execution",
        "//src/app/docs/system-impl",
        "//src/app/docs/system-impl-wasm",
        "//src/app/docs/unity/defaults",
        "//src/app/docs/unity/entities",
        "//src/app/docs/unity/system-impl",
        "//src/app/docs/unity/unity-sync",
        "//src/components/layout/content",
        "//src/components/layout/sidenav",
        "//src/components/layout/sidenav-section",
    ],
)
