load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "getstarted_component_style",
    src = "getstarted.component.scss",
)

ng_ts_project(
    name = "getstarted",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "getstarted.component.html",
        ":getstarted_component_style",
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
