load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "home_component_style",
    src = "home.component.scss",
)

ng_ts_project(
    name = "home",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "home.component.html",
        ":home_component_style",
    ],
    deps = [
        "//src/components/ecsact-lang-syntax",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@types/node",
        "@npm//detect-browser",
    ],
)
