load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "home_component_style",
    srcs = ["home.component.scss"],
    deps = ["@typed_css"],
)

ng_project(
    name = "home",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/components/ecsact-example-diagram",
        "//src/components/ecsact-lang-syntax",
        "//src/components/layout/content",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//:node_modules/@types/node",
        "//:node_modules/detect-browser",
    ],
)
