load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

package(default_visibility = ["//:__subpackages__"])

copy_file(
    name = "copy_typed_scss",
    src = "@typed_css//:typed.scss",
    out = "typed.scss",
)

sass_binary(
    name = "home_component_style",
    srcs = [
        "home.component.scss",
        "typed.scss",
    ],
)

ng_project(
    name = "home",
    srcs = [
        "home.component.css",
        "home.component.html",
        "home.component.ts",
        "home-routing.module.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//:node_modules/@types/node",
        "//:node_modules/detect-browser",
        "//src/components/ecsact-example-diagram",
        "//src/components/ecsact-lang-syntax",
        "//src/components/layout/content",
    ],
)
