load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "introduction_component_style",
    srcs = ["introduction.component.scss"],
)

ng_project(
    name = "introduction",
    srcs = [
        "introduction-routing.module.ts",
        "introduction.component.ts",
        "introduction.component.html",
        "introduction.component.css",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
