load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "introduction_component_style",
    srcs = ["introduction.component.scss"],
)

ng_project(
    name = "introduction",
    srcs = [
        "introduction.component.css",
        "introduction.component.html",
        "introduction.component.ts",
        "introduction-routing.module.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
