load("//tools:ng.bzl", "ng_project")

package(default_visibility = ["//:__subpackages__"])

ng_project(
    name = "not-found",
    srcs = [
        "not-found-routing.module.ts",
        "not-found.component.ts",
        "not-found.component.html",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
