load("//tools:ng.bzl", "ng_project")

package(default_visibility = ["//:__subpackages__"])

ng_project(
    name = "not-found",
    srcs = [
        "not-found.component.html",
        "not-found.component.ts",
        "not-found-routing.module.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
