load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "reference_component_style",
    srcs = ["reference.component.scss"],
)

ng_project(
    name = "reference",
    srcs = [
        "reference-routing.module.ts",
        "reference.component.ts",
        "reference.component.html",
        "reference.component.scss",
    ],
    deps = [
        "//src/app/reference/overview",
        "//src/app/reference/repo",
        "//src/app/reference/repo-ref",
        "//src/components/layout/content",
        "//src/components/layout/sidenav",
        "//src/components/layout/sidenav-section",
        "//src/search:service",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
    ],
)
