load("//tools:angular_ts_project.bzl", "ng_ts_project")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "styles",
    src = "roadmap.component.scss",
)

ng_ts_project(
    name = "roadmap",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "roadmap.component.html",
        ":styles",
    ],
    deps = [
        "//src/search:service",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//rxjs",
    ],
)
