load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["roadmap.component.scss"],
)

ng_project(
    name = "roadmap",
    srcs = glob(["*.ts"]),
    deps = [
        "//src/search:service",
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//:node_modules/@types/marked",
        "//:node_modules/marked",
        "//:node_modules/rxjs",
    ],
)
