load("//tools:ng.bzl", "ng_project")
load("//tools:sass.bzl", "sass_binary")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "styles",
    srcs = ["roadmap.component.scss"],
)

ng_project(
    name = "roadmap",
    srcs = [
        "roadmap.component.css",
        "roadmap.component.html",
        "roadmap.component.ts",
        "roadmap-routing.module.ts",
    ],
    deps = [
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/core",
        "//:node_modules/@angular/router",
        "//:node_modules/@types/marked",
        "//:node_modules/marked",
        "//:node_modules/rxjs",
        "//src/search:service",
    ],
)
