load("//tools:angular_ts_project.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_ts_project(
    name = "start",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "start.component.html",
        "start-overview.component.html",
    ],
    deps = [
        "//src/app/start/custom",
        "//src/app/start/godot",
        "//src/app/start/tutorials",
        "//src/app/start/unity",
        "//src/app/start/unreal",
        "//src/components/layout/content",
        "//src/components/layout/sidenav",
        "//src/components/layout/sidenav-section",
        "//src/components/code-block-variation",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//@types/node",
        "@npm//detect-browser",
    ],
)
